--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html style='height: 100%'>
   <head>
     <link href='reset.css' rel='stylesheet'>
+    <link href='global.css' rel='stylesheet'>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>skim</title>
