use relative paths in index.html

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html style='height: 100%'>
   <head>
-    <link href='reset.css' rel='stylesheet'>
-    <link href='global.css' rel='stylesheet'>
+    <link href='./reset.css' rel='stylesheet'>
+    <link href='./global.css' rel='stylesheet'>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>skim</title>
   </head>
   <body style='height: 100%'>
     <main style='height: 100%'></main>
-    <script src="main.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
