--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>skim</title>
   </head>
   <body style='height: 100%'>
-    <main style='height: 100%'></main>
+    <main></main>
     <script src="./main.js"></script>
   </body>
 </html>
