--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html style='height: 100%'>
   <head>
-    <link href='./reset.css' rel='stylesheet'>
-    <link href='./global.css' rel='stylesheet'>
+    <link rel='stylesheet' href='./reset.css'>
+    <link rel='stylesheet' href='./global.css'>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>skim</title>
