--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html style='height: 100%'>
   <head>
+    <script src="./startup.coffee"></script>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
     <link rel='stylesheet' href='./reset.css'>
     <link rel='stylesheet' href='./global.css'>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>skim</title>
   </head>
   <body style='height: 100%'>
