complete url loading loop; evolve design language

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html style='height: 100%'>
   <head>
-    <script src="./startup.coffee"></script>
+    <script src="./state.coffee"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel='stylesheet' href='./reset.css'>
     <link rel='stylesheet' href='./global.css'>
     <title>skim</title>
   </head>
-  <body style='height: 100%'>
+  <body style='height: 100%' oncontextmenu='return false;'>
     <main></main>
     <script src="./main.js"></script>
   </body>
