refactor internal data structures; various fixes

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html style='height: 100%'>
   <head>
-    <script src="./state.coffee"></script>
+    <script src="./init-feed.coffee"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel='stylesheet' href='./reset.css'>
