much refactor; WIP redesign

--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
-<html style='height: 100%'>
+<html style='height:100%'>
 	<head>
-		<script src="./init-feed.coffee"></script>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel='stylesheet' href='./reset.css'>
-		<link rel='stylesheet' href='./global.css'>
 		<title>skim</title>
 	</head>
-	<body style='height: 100%' oncontextmenu='return false;'>
-		<main></main>
-		<script src="./main.js"></script>
-	</body>
+	<body style='height:100%' oncontextmenu='return false'></body>
+	<link rel='stylesheet' href='/r.css'>
+	<link rel='stylesheet' href='/a.css'>
+	<script src="/main.coffee"></script>
 </html>
