--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html style='height:100%'>
+<html style='height:100%;font-size:50%'>
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<title>skim</title>
-		<link rel='stylesheet' href='/r.css'>
-		<link rel='stylesheet' href='/a.css'>
+		<link rel='stylesheet' href='./r.css'>
+		<link rel='stylesheet' href='./a.css'>
 	</head>
 	<body style='height:100%' oncontextmenu='return false'></body>
-	<script src="/main.coffee"></script>
+	<script src="./main.coffee"></script>
 </html>
