finish refactoring state/dataflow critical paths

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html style='height:100%;font-size:50%'>
+<html style='height:100%;font-size:50%'><!--1rem=8px-->
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
+		<link rel='stylesheet' href='./override.css'>
+		<link rel='stylesheet' href='./general.css'>
 		<title>skim</title>
-		<link rel='stylesheet' href='./r.css'>
-		<link rel='stylesheet' href='./a.css'>
 	</head>
 	<body style='height:100%' oncontextmenu='return false'></body>
 	<script src="./main.coffee"></script>
