--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel='stylesheet' href='./override.css'>
-		<link rel='stylesheet' href='./general.css'>
-		<title>skim</title>
+		<link rel='stylesheet' href='./r.css'>
+		<link rel='stylesheet' href='./a.css'>
+		<title>*</title>
 	</head>
 	<body style='height:100%' oncontextmenu='return false'></body>
-	<script src="./main.coffee"></script>
+	<script src="./init.coffee"></script>
 </html>
