reorganize files; add RedditComment data structure

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel='stylesheet' href='./r.css'>
-		<link rel='stylesheet' href='./a.css'>
+		<link rel='stylesheet' href='./styles/resets.css'>
+		<link rel='stylesheet' href='./styles/app.css'>
 		<title>*</title>
 	</head>
 	<body style='height:100%' oncontextmenu='return false'></body>
