add CommentTree for nesting comments; make scores fit with nesting

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html style='height:100%;font-size:50%'><!--1rem=8px-->
 	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
+		<meta charset='UTF-8' />
+		<meta name='viewport' content='width=device-width' />
 		<link rel='stylesheet' href='./styles/resets.css'>
 		<link rel='stylesheet' href='./styles/app.css'>
 		<title>*</title>
 	</head>
 	<body style='height:100%' oncontextmenu='return false'></body>
-	<script src="./init.coffee"></script>
+	<script src='./init.coffee'></script>
 </html>
