Rearchitect infrastructure - e.g. state/feed flow

--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
-<html style='height:100%;font-size:50%'><!--1rem=8px-->
+<html>
 	<head>
 		<meta charset='UTF-8' />
 		<meta name='viewport' content='width=device-width' />
-		<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
 		<link rel='stylesheet' href='./styles/resets.css'>
 		<link rel='stylesheet' href='./styles/app.css'>
-		<title>*</title>
+		<title>not reddit</title>
 	</head>
-	<body style='height:100%' oncontextmenu='return false'></body>
+	<body oncontextmenu='return false'></body>
 	<script src='./init.coffee'></script>
 </html>
