--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
 			}
 			menu {
 				margin: 0;
+				padding: 0;
 			}
 		</style>
 		<div id='svelte-root' style='position:fixed; width:100vw; height:100vh'></div>
