--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
 		<!-- External esources -->
 		<link rel="preconnect" href="https://oauth.reddit.com">
 		<link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.0.2/dist/tailwind.min.css">
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap" rel="stylesheet">
 		<!-- Page metadata -->
 		<title></title>
 		<link rel='icon' sizes='24x24' href=''>
@@ -24,6 +27,9 @@
 			* {
 				max-height: 100%;
 				max-width: 100%;
+			}
+			body {
+				font-family: 'Roboto Mono', monospace;
 			}
 			menu {
 				margin: 0;
