--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
 		<link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.0.2/dist/tailwind.min.css">
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
+		<!-- Internal resources -->
+		<link rel='stylesheet' href='/styles.css' />
 		<!-- Page metadata -->
 		<title></title>
 		<link rel='icon' sizes='24x24' href=''>
@@ -22,34 +24,6 @@
 		<meta name='theme-color' value=''>
 	</head>
 	<body oncontextmenu='return false'>
-		<style>
-			a {
-				color: cornflowerblue;
-				cursor: default;
-			}
-			a[target='_blank'] {
-				cursor: alias;
-			}
-			body {
-				font: 10px/1.5 'Roboto Mono';
-			}
-			menu {
-				margin: 0;
-				padding: 0;
-			}
-			ol {
-				list-style: inside;
-			}
-			ul {
-				list-style: inside;
-			}
-			.hide-scrollbar {
-				scrollbar-width: none;
-			}
-			.hide-scrollbar::-webkit-scrollbar {
-				width: 0;
-			}
-		</style>
 		<div id='svelte-root' style='position:fixed; width:100vw; height:100vh'></div>
 		<noscript>You need JavaScript for this website.</noscript>
 	</body>
