--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
 		<meta name='description' value=''>
 		<meta name='theme-color' value=''>
 	</head>
-	<body oncontextmenu='return false'>
+	<body>
 		<div id='svelte-root' style='position:fixed; width:100vw; height:100vh'></div>
 		<noscript>You need JavaScript for this website.</noscript>
 	</body>
