add POC layout for pie menu

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 		<meta name='description' value=''>
 		<meta name='theme-color' value=''>
 	</head>
-	<body>
+	<body oncontextmenu='return false'>
 		<div id='svelte-root' style='position:fixed; width:100vw; height:100vh'></div>
 		<noscript>You need JavaScript for this website.</noscript>
 	</body>
