make global styles stylus; add favicon placeholders

--- a/src/index.html
+++ b/src/index.html
@@ -7,12 +7,11 @@
 		<!-- External resources -->
 		<link rel="preconnect" href="https://oauth.reddit.com">
 		<link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.0.2/dist/tailwind.min.css">
-		<!-- Internal resources -->
-		<link rel='stylesheet' href='/styles.css' />
 		<!-- Page metadata -->
 		<title></title>
-		<link rel='icon' sizes='24x24' href=''>
-		<link rel='icon' sizes='384x384' href=''>
+		<link rel='icon' sizes='16x16' href='/favicon-16x16.png'>
+		<link rel='icon' sizes='32x32' href='/favicon-32x32.png'>
+		<link rel='icon' sizes='96x96' href='/favicon-96x96.png'>
 		<meta name='application-name' value=''>
 		<meta name='author' value='Casey Ross'>
 		<meta name='color-scheme' value='normal'>
