improve sr/user info parsing; iterate layout

--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html lang='en' style='font-size:25%'><!-- Set 1rem equal to 4px -->
+<html lang='en' style='font-size:25%'><!-- 1rem : 4px -->
 	<head>
 		<meta charset='utf-8'>
-		<!-- Ensure correct mobile scaling, in the rare event of usage on mobile -->
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
 		<!-- Resources -->
 		<link rel="preconnect" href="https://oauth.reddit.com">
