--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang='en' style='font-size:25%'><!-- 1rem : 4px -->
+<html lang='en'>
 	<head>
+		<!-- Basics -->
 		<meta charset='utf-8'>
-		<meta name='viewport' content='width=device-width, initial-scale=1'>
+		<meta name='viewport' content='width=device-width'>
 		<!-- Resources -->
 		<link rel="preconnect" href="https://oauth.reddit.com">
 		<style>
@@ -324,9 +325,9 @@
 		</style>
 		<!-- Page metadata -->
 		<title></title>
-		<link rel='icon' sizes='16x16' href='/favicon-16x16.png'>
-		<link rel='icon' sizes='32x32' href='/favicon-32x32.png'>
-		<link rel='icon' sizes='96x96' href='/favicon-96x96.png'>
+		<link rel='icon' sizes='16x16' href='/favicons/favicon_16x16.png'>
+		<link rel='icon' sizes='32x32' href='/favicons/favicon_32x32.png'>
+		<link rel='icon' sizes='96x96' href='/favicons/favicon_96x96.png'>
 		<meta name='application-name' value=''>
 		<meta name='author' value='Casey Ross'>
 		<meta name='color-scheme' value='normal'>
@@ -334,6 +335,6 @@
 		<meta name='theme-color' value=''>
 	</head>
 	<body oncontextmenu='return false'>
-		<noscript>You need JavaScript for this website.</noscript>
+		<noscript>To be able to load content from Reddit, JavaScript needs to be enabled in your browser.</noscript>
 	</body>
 </html>
