refactor for systematic mouse button navigation

--- a/src/index.html
+++ b/src/index.html
@@ -334,7 +334,7 @@
 		<meta name='description' value=''>
 		<meta name='theme-color' value=''>
 	</head>
-	<body oncontextmenu='return false'>
+	<body>
 		<noscript>To be able to load content from Reddit, JavaScript needs to be enabled in your browser.</noscript>
 	</body>
 </html>
