--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,8 @@
 		<meta name='author' value='Casey Ross'>
 		<meta name='color-scheme' value='normal'>
 		<meta name='description' value=''>
-		<meta name='theme-color' value=''>
+		<meta name='theme-color' value=''><link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap" rel="stylesheet">
 	</head>
 	<body>
 		<noscript>To be able to load content from Reddit, JavaScript needs to be enabled in your browser.</noscript>
