--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 		<meta name='viewport' content='width=device-width'>
 		<!-- Resources -->
 		<link rel="preconnect" href="https://oauth.reddit.com">
+		<link rel='stylesheet' type='text/css' href='/licensed/Fabrikat-Normal.css'>
 		<!-- Page metadata -->
 		<title></title>
 		<link rel='icon' sizes='16x16' href='/favicons/favicon-16x16.png'>
@@ -16,7 +17,7 @@
 		<meta name='color-scheme' value='normal'>
 		<meta name='description' value=''>
 		<meta name='theme-color' value=''><link rel="preconnect" href="https://fonts.gstatic.com">
-		<link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif&display=swap" rel="stylesheet">
 	</head>
 	<body>
 		<noscript>To be able to load content from Reddit, JavaScript needs to be enabled in your browser.</noscript>
