--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,6 @@
 		<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif&display=swap" rel="stylesheet">
 	</head>
 	<body>
-		<noscript>To be able to load content from Reddit, JavaScript needs to be enabled in your browser.</noscript>
+		<noscript>You need to enable JavaScript for us to be able to load content from Reddit.</noscript>
 	</body>
 </html>
