big refactor much wow

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 		<link rel="preconnect" href="https://oauth.reddit.com">
 		<link rel='stylesheet' type='text/css' href='/licensed/Fabrikat-Normal.css'>
 		<!-- Page metadata -->
-		<title></title>
+		<title>Ares</title>
 		<link rel='icon' sizes='16x16' href='/favicons/favicon-16x16.png'>
 		<link rel='icon' sizes='32x32' href='/favicons/favicon-32x32.png'>
 		<link rel='icon' sizes='96x96' href='/favicons/favicon-96x96.png'>
@@ -16,10 +16,9 @@
 		<meta name='author' value='Casey Ross'>
 		<meta name='color-scheme' value='normal'>
 		<meta name='description' value=''>
-		<meta name='theme-color' value=''><link rel="preconnect" href="https://fonts.gstatic.com">
-		<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif&display=swap" rel="stylesheet">
+		<meta name='theme-color' value=''>
 	</head>
 	<body>
-		<noscript>You need to enable JavaScript for us to be able to load content from Reddit.</noscript>
+		<noscript>You need to enable JavaScript in your web browser. Otherwise, we can't load any data from Reddit.</noscript>
 	</body>
 </html>
