dataflow: add subreddit sorting UI and internals

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,9 @@
 		<meta name='color-scheme' value='normal'>
 		<meta name='description' value=''>
 		<meta name='theme-color' value=''>
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Karla:wght@300;400;500;700;800&display=swap" rel="stylesheet">
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript in your web browser. Otherwise, we can't load any data from Reddit.</noscript>
