design: feed post layout, various

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 		<link rel="preconnect" href="https://oauth.reddit.com">
 		<link rel='stylesheet' type='text/css' href='/licensed/Fabrikat-Normal.css'>
 		<link rel='stylesheet' type='text/css' href='/fonts.css'>
+		<link rel='stylesheet' type='text/css' href='/font/iosevka-aile.css'>
 		<!-- Page metadata -->
 		<title>Ares</title>
 		<link rel='icon' sizes='16x16' href='/favicons/favicon-16x16.png'>
