internals: split priority code out to run ASAP

--- a/src/index.html
+++ b/src/index.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html lang='en'>
 	<head>
-		<!-- Basics -->
+		<!-- Scripts -->
+		<%= htmlWebpackPlugin.tags.headTags %>
+		<!-- Metadata -->
 		<meta charset='utf-8'>
 		<meta name='viewport' content='width=device-width'>
-		<!-- Resources -->
-		<link rel='stylesheet' type='text/css' href='/licensed/Fabrikat-Normal.css'>
-		<link rel='stylesheet' type='text/css' href='/fonts.css'>
-		<link rel='stylesheet' type='text/css' href='/font/iosevka-aile.css'>
-		<!-- Page metadata -->
 		<title>Ares</title>
-		<link rel='icon' sizes='16x16' href='/favicons/favicon-16x16.png'>
-		<link rel='icon' sizes='32x32' href='/favicons/favicon-32x32.png'>
-		<link rel='icon' sizes='96x96' href='/favicons/favicon-96x96.png'>
 		<meta name='application-name' value=''>
 		<meta name='author' value='Casey Ross'>
 		<meta name='color-scheme' value='normal'>
 		<meta name='description' value=''>
 		<meta name='theme-color' value=''>
+		<!-- Styles -->
+		<link rel='stylesheet' type='text/css' href='/fonts.css'>
+		<link rel='stylesheet' type='text/css' href='/font/iosevka-aile.css'>
+		<link rel='stylesheet' type='text/css' href='/licensed/Fabrikat-Normal.css'>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Karla:wght@300;400;500;700;800&display=swap" rel="stylesheet">
+		<!-- Favicon -->
+		<link rel='icon' sizes='16x16' href='/favicons/favicon-16x16.png'>
+		<link rel='icon' sizes='32x32' href='/favicons/favicon-32x32.png'>
+		<link rel='icon' sizes='96x96' href='/favicons/favicon-96x96.png'>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript in your web browser. Otherwise, we can't load any data from Reddit.</noscript>
