design: tidy up posts layout

--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,13 @@
 		<meta name='theme-color' value=''>
 		<!-- Styles -->
 		<link rel='stylesheet' type='text/css' href='/fonts.css'>
+		<link rel='stylesheet' type='text/css' href='/inter.css'>
 		<link rel='stylesheet' type='text/css' href='/font/iosevka-aile.css'>
 		<link rel='stylesheet' type='text/css' href='/licensed/Fabrikat-Normal.css'>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Karla:wght@300;400;500;700;800&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
 		<!-- Favicon -->
 		<link rel='icon' sizes='16x16' href='/favicons/favicon-16x16.png'>
 		<link rel='icon' sizes='32x32' href='/favicons/favicon-32x32.png'>
