layout: switch back to 3-column; add basic subreddit tags

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,10 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Karla:wght@300;400;500;700;800&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Besley:ital@0;1&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Yomogi&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 		<!-- Favicon -->
 		<link rel='icon' sizes='16x16' href='/favicons/favicon-16x16.png'>
 		<link rel='icon' sizes='32x32' href='/favicons/favicon-32x32.png'>
