internals: refactor wip

--- a/pages/index/index.html
+++ b/pages/index/index.html
@@ -19,6 +19,6 @@
 		<link rel='icon' sizes='16x16' href='/icons/favicon-16.png'>
 	</head>
 	<body>
-		<noscript>Turn on JavaScript to load data.</noscript>
+		<noscript>Turn on JavaScript to connect to Reddit.</noscript>
 	</body>
 </html>
