internals: refactor wip

--- a/pages/index/index.html
+++ b/pages/index/index.html
@@ -14,9 +14,9 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
-		<link rel='stylesheet' type='text/css' href='/fonts/iosevka-aile.css'>
+		<link rel='stylesheet' type='text/css' href='/iosevka-aile.css'>
 		<!-- Favicon -->
-		<link rel='icon' sizes='16x16' href='/icons/favicon-16.png'>
+		<link rel='icon' sizes='16x16' href='/favicon-16.png'>
 	</head>
 	<body>
 		<noscript>Turn on JavaScript to connect to Reddit.</noscript>
