--- a/pages/index/index.html
+++ b/pages/index/index.html
@@ -13,10 +13,7 @@
 		<!-- Styles -->
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;700&family=Karla:wght@400;700&display=swap">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;700&family=Karla:wght@400;700&display=swap">
-		<link rel='stylesheet' type='text/css' href='/FiraGO.css'>
-		<link rel='stylesheet' type='text/css' href='/iosevka-aile.css'>
+		<link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 		<!-- Favicon -->
 		<link rel='icon' sizes='16x16' href='/favicon-16.png'>
 	</head>
