--- a/core/ui/index.html
+++ b/core/ui/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang='en'>
 	<head>
-		<!-- Inlined JS -->
-		<%= htmlWebpackPlugin.tags.headTags %>
-		<!-- Metadata -->
+		<!-- charset -->
 		<meta charset='utf-8'>
+		<!-- inlined JS -->
+		<%= htmlWebpackPlugin.tags.headTags %>
+		<!-- basic metadata -->
 		<title>reddit</title>
 		<meta name='application-name' value=''>
 		<meta name='author' value='Casey Ross'>
 		<meta name='description' value=''>
 		<meta name='theme-color' value=''>
+		<link rel='icon' sizes='16x16' href='/favicon-16.png'>
 		<!-- CSS -->
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
-		<!-- Favicons -->
-		<link rel='icon' sizes='16x16' href='/favicon-16.png'>
 	</head>
 	<body>
 		<noscript>Turn on JavaScript to connect to Reddit.</noscript>
