internals: rafactor WIP: modify file organization (mostly in UI)

--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,11 @@
 		<link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap'>
 		<link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap'>
 		<!-- local styles -->
-		<link rel='icon' sizes='16x16' href='/graphics/favicon-16.png'>
-		<link rel='stylesheet' href='/stylesheets/base.styl'>
-		<link rel='stylesheet' href='/stylesheets/markdown.styl'>
-		<link rel='stylesheet' href='/stylesheets/utility.styl'>
-		<link rel='stylesheet' href='/stylesheets/variables.styl'>
+		<link rel='icon' sizes='16x16' href='./favicon-16.png'>
+		<link rel='stylesheet' href='./ui/stylesheets/base.styl'>
+		<link rel='stylesheet' href='./ui/stylesheets/markdown.styl'>
+		<link rel='stylesheet' href='./ui/stylesheets/utility.styl'>
+		<link rel='stylesheet' href='./ui/stylesheets/variables.styl'>
 		<!-- inlined scripts -->
 		<%= htmlWebpackPlugin.tags.headTags %>
 	</head>
