comments: design work

--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,10 @@
 		<!-- remote styles -->
 		<link rel='preconnect' href='https://fonts.googleapis.com'>
 		<link rel='preconnect' href='https://fonts.gstatic.com' crossorigin>
-		<link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap'>
-		<link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap'>
 		<!-- local styles -->
+		<style>html { font-family: system-ui }</style>
 		<link rel='icon' href='/icons/upvote.svg' type='image/svg+xml'>
 		<link rel='icon' href='/favicons/16x16.png' type='image/png' sizes='16x16'>
-		<link rel='stylesheet' href='/stylesheets/vars.css'>
-		<link rel='stylesheet' href='/stylesheets/base.css'>
 		<!-- metadata -->
 		<meta charset='utf-8'>
 		<meta name='application-name' value=''>
