internals: clarify index.html structure

--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 <html lang='en'>
 	<head>
-		<!-- inlined critical path scripts -->
+		<!-- basic info -->
+		<meta charset='utf-8'>
+		<title>reddit</title>
+		<!-- webpack bundle -->
 		<%= htmlWebpackPlugin.tags.headTags %>
-		<!-- remote styles -->
+		<!-- non-bundled resources -->
 		<link rel='preconnect' href='https://fonts.googleapis.com'>
 		<link rel='preconnect' href='https://fonts.gstatic.com' crossorigin>
-		<!-- metadata -->
-		<meta charset='utf-8'>
-		<meta name='application-name' value=''>
-		<meta name='author' value='Casey Ross'>
-		<meta name='description' value=''>
-		<meta name='theme-color' value=''>
-		<title>reddit</title>
 	</head>
 	<body>
 		<noscript>Turn on JavaScript to connect to Reddit.</noscript>
