ui: major refactoring & various design work

--- a/src/ui/app/index.html
+++ b/src/ui/app/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<!-- basic info -->
 		<meta charset='utf-8'>
+		<title>r3</title>
 		<!-- webpack bundle -->
 		<%= htmlWebpackPlugin.tags.headTags %>
 	</head>
