--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -7,12 +7,10 @@
 		<link rel='dns-prefetch' href='https://preview.redd.it'>
 		<link rel='dns-prefetch' href='https://v.redd.it'>
 		<title>Arc: a Reddit web client</title>
-		<%= htmlWebpackPlugin.tags.headTags %><link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Inclusive+Sans:ital@0;1&display=swap" rel="stylesheet">
-		
+		<!-- boot scripts will be injected here during build -->
+		<%= htmlWebpackPlugin.tags.headTags %>
 	</head>
 	<body>
-		<noscript>Sorry, we can't download any data from Reddit unless you enable Javascript in your web browser.</noscript>
+		<noscript>It looks like you don't have JavaScript enabled. Unfortunately, we need it to get data from Reddit.</noscript>
 	</body>
 </html>
