ui: update app name

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -6,7 +6,7 @@
 		<link rel='dns-prefetch' href='https://i.redd.it'>
 		<link rel='dns-prefetch' href='https://preview.redd.it'>
 		<link rel='dns-prefetch' href='https://v.redd.it'>
-		<title>Arc: a Reddit web client</title>
+		<title>&#65279;</title>
 		<!-- boot scripts will be injected here during build -->
 		<%= htmlWebpackPlugin.tags.headTags %>
 	</head>
